# MBD-Framework

./: .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  LICENSE  PAPER_7_THE_ENDEMIC_BASELINE.md  PAPER_8_ADVERSARIAL_HORIZON.md  README.md  citation_watchdog.py  index.html  launch_stella_field.bat  llms.txt  pyproject.toml  requirements.txt  view_stella_octangula.bat  visualize_stella.py
analysis/: __init__.py  graphing_suite.py  trauma_model.py
demos/: resonance_hierarchy.py
docs/: index.html
dynamics/: __init__.py  field_agent.py  influence_cube.py  social_fabric.py  world_evolution.py
fields/: __init__.py  translation.py
lab/: index.html  package-lock.json  package.json  server.py  tailwind.config.js  vite.config.ts
lab/src/: App.tsx  api.ts  index.css  types.ts
lab/src/components/: CubeScene.tsx  Layout.tsx
lab/src/pages/: AgentLab.tsx  BaselineLab.tsx  CouplingLab.tsx  CubeLab.tsx  (+5 more)
labs/paper1_baseline/: __init__.py  eq_lab.py  phenomena_adhd.py  phenomena_bipolar.py  phenomena_ossification.py  phenomena_phantom.py  phenomena_sbs.py
labs/paper2_markov/: __init__.py  echo_chamber.py
labs/paper3_episodic/: __init__.py  reinstantiation.py
labs/paper4_coupling/: __init__.py  phenomena_aspd.py  phenomena_asymmetry.py  phenomena_bpd.py  phenomena_echo.py  phenomena_fragmentation.py
labs/paper5_emergent_gate/: __init__.py  dual_resonance.py  mood_incongruent.py
labs/paper6_resonant_gate/: __init__.py  deontological_tests.py  resonant_gate.py  zeta_lab.py
labs/paper7_endemic_baseline/: __init__.py  phenomena_endemic.py  phenomena_rezeroing.py
labs/paper8_adversarial_horizon/: phenomena_recursive_immunity.py
markov/: __init__.py  engine.py  tensor_library.py
mbd/: __init__.py  active_states.py  agent.py  hypercube.py  internal_states.py  sensory_states.py
notebooks/: 01_baseline_deviation.ipynb  04_executive_load.ipynb  _generate_notebooks.py
translations/fa/: README.md  paper1_fa_part1.md  paper1_fa_part2.md  paper1_fa_part3.md  paper1_fa_part4.md  paper1_fa_part5.md
translations/fr/: README.md  paper1_fr_part1.md  paper1_fr_part2.md  paper1_fr_part3.md  paper1_fr_part4.md  paper1_fr_part5.md
