[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "mbd-framework"
version = "0.8.0"
description = (
    "Memory as Baseline Deviation — a computational framework for "
    "personality dynamics, adversarial horizon engineering, and the "
    "mathematics of psychological captivity and recovery."
)
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Brandon Everett", email = "brandon.everett@example.com" }
]
keywords = [
    "memory",
    "baseline deviation",
    "adversarial",
    "cognitive dynamics",
    "MBD",
    "horizon engineering",
    "kappa coupling",
    "endemic baseline",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
labs = [
    "numpy>=1.24",
    "matplotlib>=3.7",
    "scipy>=1.10",
]
api = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
]
all = [
    "mbd-framework[labs,api]",
]

[project.urls]
Homepage        = "https://github.com/YellowHapax/MBD-Framework"
Repository      = "https://github.com/YellowHapax/MBD-Framework"
"DOI (Zenodo)"  = "https://doi.org/10.5281/zenodo.18652919"
"Bug Tracker"   = "https://github.com/YellowHapax/MBD-Framework/issues"
"Software Heritage" = "https://archive.softwareheritage.org/browse/origin/?origin_url=https://github.com/YellowHapax/MBD-Framework"

[project.scripts]
mbd = "mbd.paper8:_print_kernel"

[tool.setuptools.packages.find]
include = ["mbd*", "labs*", "analysis*", "dynamics*"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.json", "*.txt"]
